k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devsecops-service
  namespace: devsecops

spec:
  selector:
    app: devsecops-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
