k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-demo
  namespace: devsecops
spec:
  podSelector:
    matchLabels:
      app: devsecops-demo
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 3000
      protocol: TCP
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
